# spi_slave

./: CMakeLists.txt  README.md
cmake/: FindWiringOp.cmake
examples/: attiny85.cpp  echo_client.cpp  gpio.py
include/spi_slave/: pin_access.h  protocol.h  rpi_gpio_access.h  spi_device.h  watchdog.h
src/: test_runner.py
src/examples/: echoclient.py  gpio.py
src/spislave/: rpigpioaccess.py
